# cuda_practice

./: CMakeLists.txt  README.md  run.sh
include/: CudaAllocator.h
src/: relu.cu  sgemm.cu
test/: test_gemm.cu  test_relu.cu
